<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homescreen">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="0dp"
                android:background="?android:attr/colorEdgeEffect"
                android:text="TANGEDCO SAFETY"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="53dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:contentDescription="User Name label"
                    android:text="User/Supervisor Name"
                    android:textAlignment="gravity"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="98dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="User Name label"
                    android:text="@string/username"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bordercreator"
                android:hint="Enter User Name"
                android:minHeight="50dp"
                android:textAlignment="gravity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:text=" Select User Role"
                    android:textAlignment="gravity"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/userrole"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bordercreator"
                android:minHeight="50dp"
                android:text=" SELECT"
                android:textAlignment="gravity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:text=" Select Circle Name"
                    android:textAlignment="gravity"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/circlename"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bordercreator"
                android:minHeight="50dp"
                android:text=" SELECT CIRCLE NAME"
                android:textAlignment="gravity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="187dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:text=" Select Section Name"
                    android:textAlignment="gravity"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:text="@string/sectionname"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinner7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bordercreator"
                android:minHeight="50dp"
                android:text=" SELECT SECTION NAME"
                android:textAlignment="gravity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="178dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:contentDescription="User bel"
                    android:text="STAFF NAME ON SAFETY"
                    android:textAlignment="gravity"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="User bel"
                    android:text="@string/staffname"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bordercreator"
                android:hint="STAFF NAME CLIMBED ON STRUCTURE"
                android:minHeight="50dp"
                android:textAlignment="gravity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:contentDescription="Work label"
                    android:text="Work Description"
                    android:textAlignment="gravity"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="Work label"
                    android:text="@string/workdesc"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bordercreator"
                android:hint="EXPLAIN THE NATURE OF WORK"
                android:minHeight="50dp"
                android:textAlignment="gravity" />

            <Button
                android:id="@+id/button4mapscreen"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:text="@string/photo2" />

            <ImageView
                android:id="@+id/photoImageView"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bordercreatorfortext1"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button4mapscreen" />

            <Button
                android:id="@+id/button4mapscreen2"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:text="@string/photo1" />

            <ImageView
                android:id="@+id/photoImageView2"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bordercreatorfortext1"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button4mapscreen2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/button4mapscreensubmit"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="submit" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>